--- a/reset-password.html
+++ b/reset-password.html
@@ -8,54 +8,47 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700;800&display=swap" rel="stylesheet">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <!-- Uncomment for local image: <link rel="icon" type="image/x-icon" href="/static/images/favicon.ico"> -->
 
     <style>
-        body { font-family: 'Manrope', sans-serif; background-color: #1A2533; color: #E5E7EB; }
+        body { font-family: 'Manrope', sans-serif; background-color: #2C3E50; color: #FDFEFE; }
         .accent-text { color: #00B5AD; }
         .accent-bg { background-color: #00B5AD; }
         .accent-bg:hover { background-color: #009A94; }
-        .section-padding { padding: 5rem 2rem; }
-        @media (min-width: 768px) { .section-padding { padding: 7rem 3rem; } }
-        .animate-fade-in { animation: fadeIn 1s ease-out; }
-        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
-        .bg-gradient-dark { background: linear-gradient(to bottom, #1A2533, #111827); }
-        .hover-scale { transition: transform 0.3s ease; }
-        .hover-scale:hover { transform: scale(1.05); }
-        .card { background: #1F2A44; border: 1px solid #2D3748; }
     </style>
 </head>
-<body class="flex flex-col items-center justify-center min-h-screen p-4 bg-gradient-dark animate-fade-in">
+<body class="flex flex-col items-center justify-center min-h-screen p-4">
 
     <div class="w-full max-w-md">
-        <a href="/" class="flex items-center justify-center gap-3 mb-8 transition-opacity hover:opacity-90">
-            <img src="/logo.png" alt="Cogmatiq Logo" class="w-8 h-8 object-contain hover-scale">
+        <a href="/" class="flex items-center justify-center gap-3 mb-8 transition-opacity hover:opacity-80">
+            <!-- Uncomment for local image: <img src="/static/images/logo.png" alt="Cogmatiq Logo" class="w-8 h-8 object-contain"> -->
+            <svg class="w-8 h-8 accent-text" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m8.4-8.4h-1m-16 0H3m15.55-5.55l-.71-.71M6.16 17.84l-.71-.71m12.39-.71l-.71.71M6.16 6.16l-.71.71M12 5a7 7 0 100 14 7 7 0 000-14z"></path></svg>
             <span class="text-2xl font-bold text-white">Cogmatiq</span>
         </a>
 
-        <div class="card p-8 rounded-lg shadow-lg">
+        <div class="bg-gray-800/30 p-8 rounded-lg shadow-lg">
             <h1 class="text-2xl font-bold text-center mb-6">Reset Your Password</h1>
             <p class="text-center text-sm text-gray-400 mb-6">Enter your email address to receive a password reset link.</p>
             <form id="reset-password-form" class="space-y-6">
                 <div>
-                    <label for="email" class="block text-sm font-semibold text-gray-400">Email</label>
-                    <input type="email" id="email" required class="mt-1 block w-full p-3 bg-gray-800 border border-gray-700 rounded-md focus:outline-none focus:ring-2 focus:ring-[#00B5AD]">
+                    <label for="email" class="block text-sm font-medium text-gray-300">Email</label>
+                    <input type="email" id="email" required class="mt-1 block w-full p-3 bg-gray-700 border border-gray-600 rounded-md focus:outline-none focus:ring-2 focus:ring-[#00B5AD]">
                 </div>
                 <div>
-                    <button type="submit" id="reset-button" class="w-full accent-bg text-white font-semibold py-3 px-4 rounded-md hover-scale disabled:opacity-50" disabled>Send Reset Link</button>
+                    <button type="submit" class="w-full accent-bg text-white font-bold py-3 px-4 rounded-md transition-colors duration-300">Send Reset Link</button>
                 </div>
             </form>
             <p id="message" class="mt-4 text-center text-sm text-red-400"></p>
             <p class="mt-6 text-center text-sm text-gray-400">
-                Remember your password? <a href="/login.html" class="accent-text font-semibold hover:underline">Sign In</a>
+                Remember your password? <a href="/login.html" class="accent-text font-medium hover:underline">Log In</a>
             </p>
             <p class="mt-2 text-center text-sm text-gray-400">
-                Don't have an account? <a href="/signup.html" class="accent-text font-semibold hover:underline">Sign Up</a>
+                Don't have an account? <a href="/signup.html" class="accent-text font-medium hover:underline">Sign Up</a>
             </p>
         </div>
     </div>
@@ -67,54 +60,24 @@
 
         const form = document.getElementById('reset-password-form');
         const messageEl = document.getElementById('message');
-        const resetButton = document.getElementById('reset-button');
-
-        // Enable reset button once Supabase client is initialized
-        resetButton.disabled = false;
 
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
             messageEl.textContent = '';
-            resetButton.disabled = true;
 
-            const email = document.getElementById('email').value.trim();
+            const email = document.getElementById('email').value;
 
-            try {
-                const { error } = await supabaseClient.auth.resetPasswordForEmail(email, {
-                    redirectTo: window.location.origin + '/update-password.html'
-                });
+            const { error } = await supabaseClient.auth.resetPasswordForEmail(email, {
+                redirectTo: window.location.origin + '/update-password.html'
+            });
 
-                if (error) {
-                    console.error('Supabase Reset Password Error:', {
-                        message: error.message,
-                        code: error.code,
-                        status: error.status,
-                        email: email
-                    });
-
-                    let userMessage = 'An error occurred. Please try again.';
-                    if (error.code === 'invalid_email') {
-                        userMessage = 'Please enter a valid email address.';
-                    } else if (error.code === 'user_not_found') {
-                        userMessage = 'No account found with this email.';
-                    } else if (error.status === 429) {
-                        userMessage = 'Too many requests. Please wait a few minutes and try again.';
-                    }
-                    messageEl.textContent = userMessage;
-                    resetButton.disabled = false;
-                    return;
-                }
-
-                console.log('Password reset email sent:', { email });
+            if (error) {
+                messageEl.textContent = `Error: ${error.message}`;
+            } else {
                 messageEl.textContent = 'Password reset email sent! Please check your inbox.';
                 messageEl.classList.remove('text-red-400');
                 messageEl.classList.add('text-green-400');
                 form.reset();
-                resetButton.disabled = false;
-            } catch (err) {
-                console.error('Unexpected Error:', err);
-                messageEl.textContent = 'Unexpected error. Please try again later.';
-                resetButton.disabled = false;
             }
         });
     </script>
