--- a/login.html
+++ b/login.html
@@ -18,21 +18,18 @@
     <link rel="icon" type="image/x-icon" href="/static/images/favicon.ico">
 
     <style>
-        body { font-family: 'Manrope', sans-serif; background-color: #1A2533; color: #E5E7EB; }
+        body { font-family: 'Manrope', sans-serif; background: linear-gradient(to bottom, #1A2533, #111827); color: #E5E7EB; }
         .accent-text { color: #00B5AD; }
         .accent-bg { background-color: #00B5AD; }
         .accent-bg:hover { background-color: #009A94; }
         .section-padding { padding: 5rem 2rem; }
         @media (min-width: 768px) { .section-padding { padding: 7rem 3rem; } }
-        .animate-fade-in { animation: fadeIn 1s ease-out; }
-        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
-        .bg-gradient-dark { background: linear-gradient(to bottom, #1A2533, #111827); }
         .hover-scale { transition: transform 0.3s ease; }
         .hover-scale:hover { transform: scale(1.05); }
-        .card { background: #1F2A44; border: 1px solid #2D3748; }
+        .card { background: #1F2A44; border: 1px solid #2D3748; padding: 8px; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); }
     </style>
 </head>
-<body class="flex flex-col items-center justify-center min-h-screen p-4 bg-gradient-dark animate-fade-in">
+<body class="flex flex-col items-center justify-center min-h-screen p-4">
 
     <div class="w-full max-w-md">
         <a href="/" class="flex items-center justify-center gap-3 mb-8 transition-opacity hover:opacity-90">
@@ -42,7 +39,7 @@
             <span class="text-2xl font-bold text-white">Cogmatiq</span>
         </a>
 
-        <div class="card p-8 rounded-lg shadow-lg">
+        <div class="card p-8 rounded-lg">
             <h1 class="text-2xl font-bold text-center mb-6">Welcome Back</h1>
             <form id="login-form" class="space-y-6">
                 <div>
