--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log In - Cogmatiq</title>
-    <meta name="description" content="Sign in to your Cogmatiq account to access your AI-powered knowledge bases and manage your documents securely.">
+    <meta name="description" content="Sign in to your Cogmatiq account as of 02:33 PM CDT, Friday, October 17, 2025.">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,33 +13,23 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
-    <!-- Local: Use /static/images/favicon.ico -->
-    <!-- Production: Replace with https://storage.googleapis.com/cogmatiq-assets/images/favicon.ico -->
-    <link rel="icon" type="image/x-icon" href="/static/images/favicon.ico">
-
     <style>
         body { font-family: 'Manrope', sans-serif; background: linear-gradient(to bottom, #1A2533, #111827); color: #E5E7EB; }
         .accent-text { color: #00B5AD; }
         .accent-bg { background-color: #00B5AD; }
         .accent-bg:hover { background-color: #009A94; }
-        .section-padding { padding: 5rem 2rem; }
-        @media (min-width: 768px) { .section-padding { padding: 7rem 3rem; } }
-        .hover-scale { transition: transform 0.3s ease; }
-        .hover-scale:hover { transform: scale(1.05); }
-        .card { background: #1F2A44; border: 1px solid #2D3748; padding: 8px; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); }
+        .card { background: #1F2A44; border: 1px solid #2D3748; padding: 2rem; border-radius: 0.5rem; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); }
     </style>
 </head>
 <body class="flex flex-col items-center justify-center min-h-screen p-4">
 
     <div class="w-full max-w-md">
         <a href="/" class="flex items-center justify-center gap-3 mb-8 transition-opacity hover:opacity-90">
-            <!-- Local: Use /static/images/logo.png -->
-            <!-- Production: Replace with https://storage.googleapis.com/cogmatiq-assets/images/logo.png -->
-            <img src="/static/images/logo.png" alt="Cogmatiq Logo" class="w-8 h-8 object-contain hover-scale">
+            <svg class="w-8 h-8 accent-text" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m8.4-8.4h-1m-16 0H3m15.55-5.55l-.71-.71M6.16 17.84l-.71-.71m12.39-.71l-.71.71M6.16 6.16l-.71.71M12 5a7 7 0 100 14 7 7 0 000-14z"></path></svg>
             <span class="text-2xl font-bold text-white">Cogmatiq</span>
         </a>
 
-        <div class="card p-8 rounded-lg">
+        <div class="card">
             <h1 class="text-2xl font-bold text-center mb-6">Welcome Back</h1>
             <form id="login-form" class="space-y-6">
                 <div>
@@ -51,7 +41,7 @@
                     <input type="password" id="password" required class="mt-1 block w-full p-3 bg-gray-800 border border-gray-700 rounded-md focus:outline-none focus:ring-2 focus:ring-[#00B5AD]">
                 </div>
                 <div>
-                    <button type="submit" class="w-full accent-bg text-white font-bold py-3 px-4 rounded-md hover-scale transition-colors duration-300">Log In</button>
+                    <button type="submit" class="w-full accent-bg text-white font-bold py-3 px-4 rounded-md hover:opacity-90 transition-colors duration-300">Log In</button>
                 </div>
             </form>
             <p id="message" class="mt-4 text-center text-sm text-red-400"></p>
