--- a/reset-password.html
+++ b/reset-password.html
@@ -4,51 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reset Password - Cogmatiq</title>
-    <meta name="description" content="Reset your Cogmatiq account password to regain access to your AI-powered knowledge bases.">
-    
+    <meta name="description" content="Reset your password for your Cogmatiq account as of 03:14 PM CDT, Friday, October 17, 2025.">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;800&display=swap" rel="stylesheet">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
-    <!-- Uncomment for local image: <link rel="icon" type="image/x-icon" href="/static/images/favicon.ico"> -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
 
     <style>
-        body { font-family: 'Manrope', sans-serif; background-color: #2C3E50; color: #FDFEFE; }
+        body { font-family: 'Manrope', sans-serif; background: linear-gradient(to bottom, #1A2533, #111827); color: #E5E7EB; }
         .accent-text { color: #00B5AD; }
         .accent-bg { background-color: #00B5AD; }
         .accent-bg:hover { background-color: #009A94; }
+        .card { background: #1F2A44; border: 1px solid #2D3748; padding: 2rem; border-radius: 0.5rem; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); }
     </style>
 </head>
 <body class="flex flex-col items-center justify-center min-h-screen p-4">
 
     <div class="w-full max-w-md">
-        <a href="/" class="flex items-center justify-center gap-3 mb-8 transition-opacity hover:opacity-80">
-            <!-- Uncomment for local image: <img src="/static/images/logo.png" alt="Cogmatiq Logo" class="w-8 h-8 object-contain"> -->
+        <a href="/" class="flex items-center justify-center gap-3 mb-8 transition-opacity hover:opacity-90">
             <svg class="w-8 h-8 accent-text" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m8.4-8.4h-1m-16 0H3m15.55-5.55l-.71-.71M6.16 17.84l-.71-.71m12.39-.71l-.71.71M6.16 6.16l-.71.71M12 5a7 7 0 100 14 7 7 0 000-14z"></path></svg>
             <span class="text-2xl font-bold text-white">Cogmatiq</span>
         </a>
 
-        <div class="bg-gray-800/30 p-8 rounded-lg shadow-lg">
-            <h1 class="text-2xl font-bold text-center mb-6">Reset Your Password</h1>
-            <p class="text-center text-sm text-gray-400 mb-6">Enter your email address to receive a password reset link.</p>
+        <div class="card">
+            <h1 class="text-2xl font-bold text-center mb-6">Reset Password</h1>
             <form id="reset-password-form" class="space-y-6">
                 <div>
-                    <label for="email" class="block text-sm font-medium text-gray-300">Email</label>
-                    <input type="email" id="email" required class="mt-1 block w-full p-3 bg-gray-700 border border-gray-600 rounded-md focus:outline-none focus:ring-2 focus:ring-[#00B5AD]">
+                    <label for="email" class="block text-sm font-semibold text-gray-400">Email</label>
+                    <input type="email" id="email" required class="mt-1 block w-full p-3 bg-gray-800 border border-gray-700 rounded-md focus:outline-none focus:ring-2 focus:ring-[#00B5AD]">
                 </div>
                 <div>
-                    <button type="submit" class="w-full accent-bg text-white font-bold py-3 px-4 rounded-md transition-colors duration-300">Send Reset Link</button>
+                    <button type="submit" id="reset-button" class="w-full accent-bg text-white font-bold py-3 px-4 rounded-md hover:opacity-90 transition-colors duration-300">Send Reset Link</button>
                 </div>
             </form>
             <p id="message" class="mt-4 text-center text-sm text-red-400"></p>
             <p class="mt-6 text-center text-sm text-gray-400">
-                Remember your password? <a href="/login.html" class="accent-text font-medium hover:underline">Log In</a>
-            </p>
-            <p class="mt-2 text-center text-sm text-gray-400">
-                Don't have an account? <a href="/signup.html" class="accent-text font-medium hover:underline">Sign Up</a>
+                <a href="/login.html" class="accent-text font-semibold hover:underline">Back to Login</a>
             </p>
         </div>
     </div>
@@ -58,26 +54,50 @@
         const supabaseAnonKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Ind6ZWtkeXZ2eW5wdmlzYnZraXFnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA0NzA5NzAsImV4cCI6MjA3NjA0Njk3MH0.CGXF6Txv-OATQdaus08GohMHRyytye59hqaD0Q4BOSU';
         const supabaseClient = supabase.createClient(supabaseUrl, supabaseAnonKey);
 
+        console.log('Supabase Client Initialized with Anon Key:', supabaseAnonKey.substring(0, 10) + '...'); // Debug API key (partial for security)
+
         const form = document.getElementById('reset-password-form');
         const messageEl = document.getElementById('message');
+        const resetButton = document.getElementById('reset-button');
+
+        resetButton.disabled = false;
 
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
             messageEl.textContent = '';
+            resetButton.disabled = true;
 
-            const email = document.getElementById('email').value;
+            const email = document.getElementById('email').value.trim();
 
-            const { error } = await supabaseClient.auth.resetPasswordForEmail(email, {
-                redirectTo: window.location.origin + '/update-password.html'
-            });
+            try {
+                const { data, error } = await supabaseClient.auth.resetPasswordForEmail(email, {
+                    redirectTo: 'http://localhost:8000/update-password.html' // Update for production
+                });
 
-            if (error) {
-                messageEl.textContent = `Error: ${error.message}`;
-            } else {
-                messageEl.textContent = 'Password reset email sent! Please check your inbox.';
+                if (error) {
+                    console.error('Supabase Reset Error:', {
+                        message: error.message,
+                        code: error.code,
+                        status: error.status,
+                        email: email
+                    });
+                    messageEl.textContent = `Error: ${error.message}`;
+                    if (error.message === 'No API key found in request') {
+                        messageEl.textContent = 'Internal error: Missing API key. Please contact support.';
+                    }
+                    resetButton.disabled = false;
+                    return;
+                }
+
+                console.log('Reset link sent:', { email: email });
+                messageEl.textContent = 'Password reset link sent! Please check your inbox.';
                 messageEl.classList.remove('text-red-400');
                 messageEl.classList.add('text-green-400');
-                form.reset();
+                resetButton.disabled = false;
+            } catch (err) {
+                console.error('Unexpected Reset Error:', err);
+                messageEl.textContent = 'Unexpected error. Please try again later.';
+                resetButton.disabled = false;
             }
         });
     </script>
