feat(web): Add new pricing table and update FAQ

--- a/index.html
+++ b/index.html
@@ -133,6 +133,47 @@
 
         <section class="section-padding bg-gray-900/30 backdrop-blur-sm animate-fade-in">
             <div class="max-w-4xl mx-auto text-center">
+                <h2 class="text-3xl md:text-4xl font-bold mb-4">Find the Plan That's Right for You</h2>
+                <p class="text-gray-400 md:text-lg mb-12 max-w-3xl mx-auto">
+                    Start for free and upgrade when you're ready. All plans are secure, private, and powerful.
+                </p>
+
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-4xl mx-auto text-left">
+                    
+                    <div class="card p-8 rounded-lg flex flex-col">
+                        <h3 class="text-2xl font-bold mb-2">Free</h3>
+                        <p class="text-gray-400 mb-6">For individuals getting started with AI-powered knowledge.</p>
+                        <p class="text-4xl font-extrabold mb-4">$0</p>
+                        <ul class="space-y-3 mb-8 flex-grow">
+                            <li class="flex items-center gap-3"><span class="accent-text">✔</span> Up to 5 Document Uploads</li>
+                            <li class="flex items-center gap-3"><span class="accent-text">✔</span> Multi-Format Support (PDF, DOCX, EPUB)</li>
+                            <li class="flex items-center gap-3"><span class="accent-text">✔</span> Knowledge Base Creation</li>
+                        </ul>
+                        <a href="/signup.html" class="w-full text-center bg-gray-600 text-white font-semibold py-3 px-6 rounded-md transition-colors hover:bg-gray-500">
+                            Get Started Free
+                        </a>
+                    </div>
+
+                    <div class="card p-8 rounded-lg border-2 border-accent-text flex flex-col shadow-2xl">
+                        <h3 class="text-2xl font-bold mb-2">Pro</h3>
+                        <p class="text-gray-400 mb-6">For professionals and researchers who need unlimited power.</p>
+                        <p class="text-4xl font-extrabold mb-4">$10 <span class="text-lg font-medium text-gray-400">/ month</span></p>
+                        <ul class="space-y-3 mb-8 flex-grow">
+                            <li class="flex items-center gap-3"><span class="accent-text">✔</span> **Everything in Free, plus:**</li>
+                            <li class="flex items-center gap-3"><span class="accent-text">✔</span> **Unlimited** Document Uploads</li>
+                            <li class="flex items-center gap-3"><span class="accent-text">✔</span> **Unlimited** Knowledge Bases</li>
+                            <li class="flex items-center gap-3"><span class="accent-text">✔</span> Priority Support</li>
+                        </ul>
+                        <a href="/pricing.html" class="w-full text-center accent-bg text-white font-semibold py-3 px-6 rounded-md transition-colors hover-scale">
+                            Upgrade to Pro
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="faq-cta" class="section-padding bg-gradient-dark animate-fade-in">
+            <div class="max-w-4xl mx-auto text-center">
                 <h2 class="text-3xl md:text-4xl font-bold mb-12">Frequently Asked Questions</h2>
                 <div class="space-y-4 text-left max-w-3xl mx-auto">
                     <details class="card p-4 rounded-lg">
@@ -140,24 +181,14 @@
                         <p class="text-gray-400 mt-2">Cogmatiq supports PDFs, DOCX, TXT, Markdown, and EPUB files.</p>
                     </details>
                     <details class="card p-4 rounded-lg">
-                        <summary class="font-semibold cursor-pointer">What’s the difference between Free and Pro plans?</summary>
-                        <p class="text-gray-400 mt-2">Free: Up to 5 documents with core features. Pro: Unlimited documents, advanced analytics, and priority support.</p>
+                        <summary class="font-semibold cursor-pointer">How secure is my data?</summary>
+                        <p class="text-gray-400 mt-2">Your data is yours. We use best-in-class security, including end-to-end encryption and isolated databases. Your documents are never used for training AI models.</p>
                     </details>
                     <details class="card p-4 rounded-lg">
-                        <summary class="font-semibold cursor-pointer">How secure is my data?</summary>
-                        <p class="text-gray-400 mt-2">Your data is encrypted and stored securely with Supabase, ensuring privacy and restricted access.</p>
+                        <summary class="font-semibold cursor-pointer">Can I cancel my Pro plan at any time?</summary>
+                        <p class="text-gray-400 mt-2">Yes. You can manage or cancel your subscription at any time from your account dashboard. No questions asked.</p>
                     </details>
                 </div>
-            </div>
-        </section>
-
-        <section id="upload-cta" class="section-padding bg-gradient-dark animate-fade-in">
-            <div class="max-w-3xl mx-auto text-center">
-                <h2 class="text-3xl md:text-4xl font-bold mb-4">Ready to Unlock Your Data’s Potential?</h2>
-                <p class="text-gray-400 md:text-lg mb-8">Join thousands of professionals using Cogmatiq to transform documents into actionable intelligence.</p>
-                <a href="/signup.html" class="accent-bg text-white font-semibold py-4 px-8 rounded-lg text-lg hover-scale inline-block shadow-md">
-                    Get Started Free
-                </a>
             </div>
         </section>
     </main>
