refactor(web): Replace redundant section with 'Knowledge Graph' differentiator

--- a/index.html
+++ b/index.html
@@ -111,21 +111,34 @@
             </div>
         </section>
 
-        <section class="section-padding bg-gradient-dark animate-fade-in">
-            <div class="max-w-6xl mx-auto text-center">
-                <h2 class="text-3xl md:text-4xl font-bold mb-12">Trusted by Professionals Worldwide</h2>
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+        <section class="section-padding animate-fade-in">
+            <div class.max-w-6xl mx-auto text-center">
+                <h2 class="text-3xl md:text-4xl font-bold mb-4">More Than Search. An Insight Engine.</h2>
+                <p class="text-gray-400 md:text-lg mb-12 max-w-3xl mx-auto">
+                    Standard search tools find keywords. Cogmatiq builds a map of your knowledge, connecting concepts, people, and projects across your entire library.
+                </p>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-4xl mx-auto text-left">
+                    
                     <div class="card p-8 rounded-lg">
-                        <p class="text-gray-400 italic mb-4">"Cogmatiq transformed my research process, connecting insights across dozens of papers effortlessly."</p>
-                        <p class="text-gray-500 font-semibold">- Dr. Elena K., Academic Researcher</p>
+                        <svg class="w-10 h-10 text-gray-500 mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0zM10 10c-3 0-4-1-4-1s1-1 4-1 4 1 4 1-1 1-4 1z"></path></svg>
+                        <h3 class="text-xl font-semibold mb-2">Standard Search</h3>
+                        <p class="text-gray-400">Finds isolated passages in single documents. You still have to do the work of connecting the dots.</p>
+                        <ul class="text-gray-500 mt-4 space-y-2">
+                            <li>- Returns a list of links.</li>
+                            <li>- No cross-document context.</li>
+                            <li>- Fails on complex, multi-step questions.</li>
+                        </ul>
                     </div>
-                    <div class="card p-8 rounded-lg">
-                        <p class="text-gray-400 italic mb-4">"The ability to query technical specs with precision has streamlined our engineering workflows."</p>
-                        <p class="text-gray-500 font-semibold">- James R., Systems Engineer</p>
-                    </div>
-                    <div class="card p-8 rounded-lg">
-                        <p class="text-gray-400 italic mb-4">"Cogmatiq’s knowledge graphs give me a competitive edge in contract analysis—fast and reliable."</p>
-                        <p class="text-gray-500 font-semibold">- Laura M., Legal Consultant</p>
+
+                    <div class="card p-8 rounded-lg border-2 border-accent-text">
+                        <svg class="w-10 h-10 accent-text mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m8.4-8.4h-1m-16 0H3m15.55-5.55l-.71-.71M6.16 17.84l-.71-.71m12.39-.71l-.71.71M6.16 6.16l-.71.71M12 5a7 7 0 100 14 7 7 0 000-14z"></path></svg>
+                        <h3 class="text-xl font-semibold mb-2">Knowledge Graph</h3>
+                        <p class="text-gray-400">Connects related concepts across all your documents to provide synthesized, intelligent answers.</p>
+                        <ul class="text-gray-300 mt-4 space-y-2">
+                            <li>+ Delivers a single, precise answer.</li>
+                            <li>+ Understands relationships between files.</li>
+                            <li>+ Answers complex, multi-part questions.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -159,9 +172,9 @@
                         <p class="text-gray-400 mb-6">For professionals and researchers who need unlimited power.</p>
                         <p class="text-4xl font-extrabold mb-4">$10 <span class="text-lg font-medium text-gray-400">/ month</span></p>
                         <ul class="space-y-3 mb-8 flex-grow">
-                            <li class="flex items-center gap-3"><span class="accent-text">✔</span> **Everything in Free, plus:**</li>
-                            <li class="flex items-center gap-3"><span class="accent-text">✔</span> **Unlimited** Document Uploads</li>
-                            <li class="flex items-center gap-3"><span class="accent-text">✔</span> **Unlimited** Knowledge Bases</li>
+                            <li class="flex items-center gap-3"><span class="accent-text">✔</span> Everything in Free, plus:</li>
+                            <li class="flex items-center gap-3"><span class="accent-text">✔</span> Unlimited Document Uploads</li>
+                            <li class="flex items-center gap-3"><span class="accent-text">✔</span> Unlimited Knowledge Bases</li>
                             <li class="flex items-center gap-3"><span class="accent-text">✔</span> Priority Support</li>
                         </ul>
                         <a href="/pricing.html" class="w-full text-center accent-bg text-white font-semibold py-3 px-6 rounded-md transition-colors hover-scale">
