--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </section>
 
         <section class="section-padding animate-fade-in">
-            <div class.max-w-6xl mx-auto text-center">
+            <div class="max-w-6xl mx-auto text-center">
                 <h2 class="text-3xl md:text-4xl font-bold mb-4">More Than Search. An Insight Engine.</h2>
                 <p class="text-gray-400 md:text-lg mb-12 max-w-3xl mx-auto">
                     Standard search tools find keywords. Cogmatiq builds a map of your knowledge, connecting concepts, people, and projects across your entire library.
