added update password file

--- a/reset-password.html
+++ b/reset-password.html
@@ -71,7 +71,7 @@
 
             try {
                 const { data, error } = await supabaseClient.auth.resetPasswordForEmail(email, {
-                    redirectTo: 'http://localhost:8000/update-password.html' // Update for production
+                    redirectTo: 'https://cogmatiq.com/update-password.html'
                 });
 
                 if (error) {
