--- a/library.html
+++ b/library.html
@@ -38,6 +38,8 @@
             <span class="text-2xl font-bold text-white">Cogmatiq</span>
         </a>
         <div class="flex items-center gap-6">
+            <div id="nav-links-container" class="flex items-center gap-6">
+                </div>
             <a href="/dashboard.html" class="text-gray-400 font-medium hover:text-white transition-colors text-sm">Back to Dashboard</a>
             <button id="logout-button" class="text-gray-400 font-medium hover:text-white transition-colors text-sm">Sign Out</button>
         </div>
@@ -61,6 +63,7 @@
         const libraryList = document.getElementById('library-list');
         const loadingText = document.getElementById('loading-text');
         const logoutButton = document.getElementById('logout-button');
+        const navLinksContainer = document.getElementById('nav-links-container'); // Get the new container
 
         let userToken = null;
 
@@ -68,30 +71,62 @@
             const { data: { session } } = await supabaseClient.auth.getSession();
             if (session) {
                 userToken = session.access_token;
-                fetchLibraryDocuments();
+                fetchInitialData(); // Changed this to fetch all data
             } else {
                 window.location.href = '/login.html';
             }
         }
         main();
 
-        async function fetchLibraryDocuments() {
+        async function fetchInitialData() {
             if (!userToken) return;
+            loadingText.classList.remove('hidden');
+            loadingText.textContent = 'Loading your data...';
+            
             try {
-                const response = await fetch('https://api.cogmatiq.com/documents', {
-                    headers: { 'Authorization': `Bearer ${userToken}` }
-                });
-                if (!response.ok) throw new Error('Failed to fetch documents.');
+                // Fetch documents and subscription status in parallel
+                const [docsRes, subRes] = await Promise.all([
+                    fetch('https://api.cogmatiq.com/documents', { headers: { 'Authorization': `Bearer ${userToken}` } }),
+                    fetch('https://api.cogmatiq.com/subscription-status', { headers: { 'Authorization': `Bearer ${userToken}` } })
+                ]);
+
+                if (!docsRes.ok || !subRes.ok) {
+                    throw new Error('Failed to load dashboard data.');
+                }
+
+                const documents = await docsRes.json();
+                const subStatus = await subRes.json();
                 
-                const documents = await response.json();
-                loadingText.classList.add('hidden');
+                renderSubscriptionStatus(subStatus.is_pro);
                 renderLibraryList(documents);
+
             } catch (error) {
                 loadingText.textContent = `Error: ${error.message}`;
             }
         }
 
+        // NEW function to render the status/button
+        function renderSubscriptionStatus(isPro) {
+            if (isPro) {
+                navLinksContainer.innerHTML = `
+                    <span class="text-xs font-semibold uppercase tracking-wider px-3 py-1 rounded-full bg-green-500/20 text-green-400 border border-green-500/50">
+                        Pro Plan
+                    </span>
+                `;
+            } else {
+                navLinksContainer.innerHTML = `
+                    <span class="text-xs font-semibold uppercase tracking-wider px-3 py-1 rounded-full bg-gray-600/20 text-gray-400 border border-gray-600/50">
+                        Free Plan
+                    </span>
+                    <a href="/pricing.html" class="accent-bg text-white font-semibold py-2 px-4 rounded-md text-sm hover-scale">
+                        Upgrade to Pro
+                    </a>
+                `;
+            }
+        }
+
         function renderLibraryList(documents) {
+            loadingText.classList.add('hidden');
             libraryList.innerHTML = '';
             if (documents.length === 0) {
                 libraryList.innerHTML = '<p class="text-gray-400 text-center py-8">Your library is empty. Go to your dashboard to upload a document.</p>';
@@ -122,7 +157,7 @@
                         headers: { 'Authorization': `Bearer ${userToken}` }
                     });
                     if (!response.ok) throw new Error('Failed to delete document.');
-                    fetchLibraryDocuments();
+                    fetchInitialData(); // Re-fetch all data to refresh the list
                 } catch (error) {
                     alert(`Error: ${error.message}`);
                 }
